--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!--
+***This is the second Page***
+
+you can look first one on this link:
+https://github.com/alimokhtari79/Stock-market-portfolio
+
+Design: 
+https://dribbble.com/shots/15294741-Cryptocurrency-Mobile-Responsive/attachments/7049249?mode=media
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -52,6 +62,7 @@
                 </div>
             </header>
             <!-- /Popular News Header -->
+
             <!-- Popular News -->
             <div class="popular-news-items flex flex-col gap-4">
                 <div class="popular-news-item flex gap-5">
@@ -100,6 +111,7 @@
                 </div>
             </div>
             <!-- /Popular News -->
+            
         </div>
     </main>
 </body>
